feat: 룸메이트 추천 점수 계산 로직 단순화